<resources>
    <string name="app_name">ExchangeHub</string>
    <string name="title_home">Home</string>
    <string name="title_feeds">Feeds</string>
    <string name="title_add">Add</string>
    <string name="title_chat">Inbox</string>
    <string name="title_profile">Profile</string>
    <string name="action_settings">Settings</string>
    <string name="email">Email ID</string>
    <string name="passowrd">Password</string>
    <string name="login">LOGIN</string>
    <string name="show_pwd">Show Password</string>
    <string name="hide_pwd">Hide Password</string>
    <string name="forgot">Forgot password?</string>
    <string name="closebutton">Close Button for Activity</string>
    <string name="newUser">Not a member yet? Sign Up</string>
    <string name="fullName">Full Name</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="location">Location</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="terms_conditions">By clicking Sign Up you agree all the Terms and Conditions.</string>
    <string name="signUp">SIGN UP</string>
    <string name="already_user">Already have Account? Login</string>
    <string name="registered_emailid">Please enter your Registered Email Id below:</string>
    <string name="submit">SUBMIT</string>
    <string name="back">BACK</string>
    <string name="categories">Categories</string>
    <string name="filters">Filters</string>
    <string name="distance">Distance within (km)</string>
    <string name="url">http://030cc8c3.ngrok.io</string>
    <string name="log">Activity</string>
    <string name="event">Activity event</string>
    <string name="share_using">Share Via</string>
    <string-array name="categoryList">
        <item>Computers</item>
        <item>Accessories</item>
        <item>Electronics</item>
        <item>Mobiles</item>
        <item>Furniture</item>
        <item>Beauty</item>
    </string-array>
</resources>
